--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -2,3 +2,18 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+.avatar_size_s {
+  width: 100px;
+  height: 100px;
+}
+
+.avatar_size_m {
+  width: 200px;
+  height: 200px;
+}
+
+.avatar_size_l {
+  width: 300px;
+  height: 300px;
+}
