--- a/src/components/IconButton/IconButton.css
+++ b/src/components/IconButton/IconButton.css
@@ -2,6 +2,10 @@
 
 .icon-button {
     box-sizing: border-box;
+    display: inline-block;
+    outline: none;
+    touch-action: manipulation;
+    user-select: none;
     background: none;
     border: none;
     width: 36px;
@@ -9,6 +13,10 @@
     padding: 6px;
     transition: all .2s;
     border-radius: 50%;
+}
+
+.icon-button:hover {
+    cursor: pointer;
 }
 
 .icon-button__icon {
