--- a/src/components/IconButton/IconButton.css
+++ b/src/components/IconButton/IconButton.css
@@ -19,8 +19,9 @@
     cursor: pointer;
 }
 
-.icon-button__icon {
-    max-height: 24px;
+.icon-button__icon :first-child {
+    width: 100%;
+    height: 100%;
 }
 
 .icon-button_disabled {
