--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,14 +13,9 @@
 
 .left_slot, .right_slot {
     cursor: pointer;
-}
-
-.right_slot {
-
-}
-
-.left_slot {
-
+    color: #fff;
+    font-weight: 500;
+    font-size: 23px;
 }
 
 .text {
