--- a/src/components/IconButton/IconButton.module.css
+++ b/src/components/IconButton/IconButton.module.css
@@ -1,31 +1,33 @@
 .icon_button {
     box-sizing: border-box;
-    display: inline-block;
     outline: none;
     touch-action: manipulation;
     user-select: none;
     background: none;
     border: none;
-    width: 36px;
+    min-width: 36px;
     height: 36px;
     padding: 6px;
     transition: all .2s;
-    border-radius: 50%;
+    border-radius: 18px;
 }
 
 .icon_button:hover {
     cursor: pointer;
 }
 
-.icon_button :first-child {
+.label {
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.label i, .label img {
+  height: 100%;
 }
 
 .disabled {
-    pointer-events:none;
-}
-
-.disabled :first-child {
-  color: #aaa !important;
+    pointer-events: none;
+    color: #aaa;
 }
