--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -48,7 +48,7 @@
     width: 100%;
     margin: 10px 0 20px 0;
     padding-left: 5px;
-    line-height: 2.4;
+    line-height: 2;
     font-size: 1rem;
     border: none;
     border-top: 2px solid #c3c3c3;
@@ -105,4 +105,5 @@
     text-transform: uppercase;
     margin-bottom: 10px;
     color: salmon;
+    text-align: center;
 }
