Форма регистрации/авторизации перенесена в компонент SignInOrUp

--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -103,7 +103,7 @@
 .errorMessage {
     font-size: .7rem;
     text-transform: uppercase;
-    margin-bottom: 10px;
+    margin: 0 0 10px 0;
     color: salmon;
     text-align: center;
 }
