--- a/src/components/MessageInput/MessageInput.css
+++ b/src/components/MessageInput/MessageInput.css
@@ -2,8 +2,8 @@
   outline: none;
 
   box-sizing: border-box;
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100%;
 
   padding: 5px;
 
