--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -3,27 +3,30 @@
   display: inline-block;
 }
 
-.avatar__image {
+.image {
   border-radius: 50%;
   object-fit: cover;
 }
 
-.avatar_size_s .avatar__image {
+.imageS {
+  composes: image;
   width: 100px;
   height: 100px;
 }
 
-.avatar_size_m .avatar__image {
+.imageM {
+  composes: image;
   width: 200px;
   height: 200px;
 }
 
-.avatar_size_l .avatar__image {
+.imageL {
+  composes: image;
   width: 300px;
   height: 300px;
 }
 
-.avatar__count {
+.count {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -41,14 +44,17 @@
   text-align: center;
 }
 
-.avatar_size_s .avatar__count {
+.countS {
+  composes: count;
   font-size: 1.3rem;
 }
 
-.avatar_size_m .avatar__count {
+.countM {
+  composes: count;
   font-size: 2.6rem;
 }
 
-.avatar_size_l .avatar__count {
+.countL {
+  composes: count;
   font-size: 3.9rem;
 }
