--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 36px);
     background-color: #c3c3c3;
 }
 
@@ -29,13 +29,13 @@
 
 .loginField,
 .passwordField {
+    position: relative;
     min-width: 320px;
 }
 
 .label {
-    text-transform: uppercase;
     color: #18a0e2;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .label:hover {
@@ -54,6 +54,12 @@
     border-top: 2px solid #c3c3c3;
     border-bottom: 2px solid #c3c3c3;
     color: #00bff3;
+}
+
+.loginInput:focus,
+.passwordInput:focus {
+    border-top: 2px solid #00bff3;
+    border-bottom: 2px solid #00bff3;
 }
 
 .loginInput:focus,
@@ -103,7 +109,25 @@
 .errorMessage {
     font-size: .7rem;
     text-transform: uppercase;
-    margin: 0 0 10px 0;
     color: salmon;
     text-align: center;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+}
+
+@media(max-width: 425px) {
+    .formFields {
+        width: 270px;
+    }
+    .loginField,
+    .passwordField {
+        min-width: 270px;
+    }
+}
+
+@media(max-width: 812px) and (orientation: landscape) {
+    .form {
+        height: 450px;
+    }
 }
