--- a/src/components/ChatsListItem/ChatsListItem.module.css
+++ b/src/components/ChatsListItem/ChatsListItem.module.css
@@ -1,8 +1,9 @@
 .listItem {
     display: grid;
     padding: .3rem;
-    grid-template-columns: 100px auto 80px;
+    grid-template-columns: 100px auto auto;
     grid-template-rows: 2rem auto;
+    grid-gap: .5rem;
 }
 
 .avatar {
@@ -13,14 +14,21 @@
 .roomName {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
 
 .lastMessage {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
+    color: #777;
+    align-self: center;
 }
 
 .lastActivity {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+    justify-self: end;
+    font-size: 0.8rem;
+    color: #777;
 }
