--- a/src/components/AppLayout/AppLayout.module.css
+++ b/src/components/AppLayout/AppLayout.module.css
@@ -1,8 +1,11 @@
 .app_layout {
     width: 100%;
     height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: grid;
-    grid-template-rows: minmax(2rem, 1fr) auto;
+    grid-template-rows: 4rem auto;
 }
 
 .header {
@@ -11,5 +14,6 @@
 
 .main_area {
     grid-row: 2 / 3;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
