--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     align-items: center;
+    height: 4rem;
 }
 
 .left_slot, .right_slot, .text {
@@ -14,7 +15,7 @@
     cursor: pointer;
     color: #fff;
     font-weight: 500;
-    font-size: 23px;
+    font-size: 1rem;
 }
 
 .text {
