--- a/src/components/ChatsListItem/ChatsListItem.module.css
+++ b/src/components/ChatsListItem/ChatsListItem.module.css
@@ -1,4 +1,7 @@
 .listItem {
+    color: inherit;
+    text-decoration: none;
+
     display: grid;
     padding: .3rem;
     grid-template-columns: 100px auto auto;
