--- a/src/components/UsersListItem/UsersListItem.module.css
+++ b/src/components/UsersListItem/UsersListItem.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: 100px auto auto;
     grid-template-rows: 2rem auto 2rem;
     grid-gap: .5rem;
-    border-bottom: 1px #f3f3f3 solid;
+    border-bottom: 1px #ccc solid;
 }
 
 .selectedItem {
@@ -15,13 +15,14 @@
     grid-column: 1 / 2;
     grid-row: 1 / 4;
     align-self: center;
+    justify-self: center;
 }
 
 .username {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 
 .phone {
