--- a/src/components/FormInput/FormInput.module.css
+++ b/src/components/FormInput/FormInput.module.css
@@ -1,5 +1,4 @@
-.loginField,
-.passwordField {
+.field {
   position: relative;
   min-width: 320px;
 }
@@ -13,6 +12,29 @@
   background-color: #fff;
 }
 
+.input {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 10px 0 20px 0;
+  padding-left: 5px;
+  line-height: 2;
+  font-size: 1rem;
+  border: none;
+  border-top: 2px solid #c3c3c3;
+  border-bottom: 2px solid #c3c3c3;
+  color: #00bff3;
+}
+
+.input:focus {
+  outline: none;
+  border-top: 2px solid #00bff3;
+  border-bottom: 2px solid #00bff3;
+}
+
+.input::placeholder {
+  color: #c3c3c3;
+}
+
 .errorMessage {
   font-size: .7rem;
   text-transform: uppercase;
@@ -24,8 +46,7 @@
 }
 
 @media(max-width: 425px) {
-  .loginField,
-  .passwordField {
+  .field {
     min-width: 270px;
   }
 }
