Добавлен prop created_at в Bubble, перенос строки с длинным словом

--- a/src/components/Bubble/Bubble.css
+++ b/src/components/Bubble/Bubble.css
@@ -16,6 +16,10 @@
 	border-radius: 3px;
 }
 
+.Bubble__message .Bubble__message-text {
+	word-break: break-word;
+}
+
 .Bubble .Bubble_owner_yes {
 	flex-direction: row-reverse;
 }
