--- a/src/components/ChatsListItem/ChatsListItem.module.css
+++ b/src/components/ChatsListItem/ChatsListItem.module.css
@@ -24,6 +24,9 @@
     grid-row: 2 / 3;
     color: #777;
     align-self: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .lastActivity {
