--- a/src/components/AppLayout/AppLayout.module.css
+++ b/src/components/AppLayout/AppLayout.module.css
@@ -1,11 +1,9 @@
 .app_layout {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
+    height: 100vh;
+    width: 100vw;
+
     display: grid;
-    grid-template-rows: 4rem auto;
+    grid-template-rows: 4rem 1fr auto;
 }
 
 .header {
@@ -16,4 +14,8 @@
     grid-row: 2 / 3;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+.footer {
+  grid-right: 3 / 4;
 }
