--- a/src/components/FormInput/FormInput.module.css
+++ b/src/components/FormInput/FormInput.module.css
@@ -1,6 +1,7 @@
 .field {
-  position: relative;
-  min-width: 320px;
+  box-sizing: border-box;
+  width: 320px;
+  padding-bottom: 10px;
 }
 
 .label {
@@ -15,14 +16,13 @@
 .input {
   box-sizing: border-box;
   width: 100%;
-  margin: 10px 0 20px 0;
+  margin-top: 10px;
   padding-left: 5px;
   line-height: 2;
   font-size: 1rem;
   border: none;
   border-top: 2px solid #c3c3c3;
   border-bottom: 2px solid #c3c3c3;
-  color: #00bff3;
 }
 
 .input:focus {
@@ -39,14 +39,12 @@
   font-size: .7rem;
   text-transform: uppercase;
   color: salmon;
-  text-align: center;
-  position: absolute;
-  bottom: -5px;
-  left: 0;
+  text-align: left;
+  margin-top: 10px;
 }
 
 @media(max-width: 425px) {
   .field {
-    min-width: 270px;
+    width: 270px;
   }
 }
