--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -1,7 +1,11 @@
 .list {
-    display: block;
-    width: 100%;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+.empty {
+    text-align: center;
+    color: #777777;
+    padding: 2rem;
 }
